Resolved merge conflicts

--- a/streamdeck-obstools/manifest.json
+++ b/streamdeck-obstools/manifest.json
@@ -28,6 +28,7 @@
       ],
       "SupportedInMultiActions": false,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Shows the current OBS CPU usage",
       "UUID": "com.barraider.obstools.cpuusage",
       "PropertyInspectorPath": "PropertyInspector/CPUUsage.html"
@@ -44,6 +45,7 @@
       ],
       "SupportedInMultiActions": false,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Shows the number of dropped frames on your Stream Deck and alerts if it increases",
       "UUID": "com.barraider.obstools.droppedframes",
       "PropertyInspectorPath": "PropertyInspector/DroppedFrames.html"
@@ -120,6 +122,97 @@
     },
     {
       "Icon": "Images/icon",
+      "Name": "Input Monitor Set",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "Tooltip": "Set the monitor type of an audio input in OBS",
+      "UUID": "com.barraider.obstools.sourcemonitorsetter",
+      "PropertyInspectorPath": "PropertyInspector/InputAudioMonitor.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Input Mute Toggle",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "Tooltip": "Toggles the mute on an audio input in OBS",
+      "UUID": "com.barraider.obstools.sourcemutetoggle",
+      "PropertyInspectorPath": "PropertyInspector/InputMuteToggle.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Input Volume",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "Controllers": [ "Encoder" ],
+      "Encoder": {
+        "layout": "inputVolumeDialLayout.json",
+        "TriggerDescription": {
+          "Rotate": "Increase/Decrease",
+          "Push": "Toggle mute"
+        }
+      },
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "UserTitleEnabled": false,
+      "Tooltip": "Adjusts the volume of a input in OBS",
+      "UUID": "com.barraider.obstools.volumedial",
+      "PropertyInspectorPath": "PropertyInspector/InputVolumeDial.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Input Volume Adjust",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "UserTitleEnabled": false,
+      "Tooltip": "Adjusts the volume of a input in OBS",
+      "UUID": "com.barraider.obstools.sourcevolumeadjuster",
+      "PropertyInspectorPath": "PropertyInspector/InputVolumeAdjuster.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Input Volume Set",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "UserTitleEnabled": false,
+      "Tooltip": "Set the volume of a input in OBS",
+      "UUID": "com.barraider.obstools.sourcevolumesetter",
+      "PropertyInspectorPath": "PropertyInspector/InputVolumeSet.html"
+    },
+    {
+      "Icon": "Images/icon",
       "Name": "Instant Replay",
       "States": [
         {
@@ -141,6 +234,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Saves your Instant Replay and allows to Toggle the Instant Replay On or Off",
       "UUID": "com.barraider.obstools.instantreply",
       "PropertyInspectorPath": "PropertyInspector/InstantReplay.html"
@@ -157,6 +251,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Moves to the next scene down in the scenes list",
       "UUID": "com.barraider.obstools.nextscene",
       "PropertyInspectorPath": "PropertyInspector/OBSTools.html"
@@ -173,6 +268,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Allows you to switch back to your previously used scene",
       "UUID": "com.barraider.obstools.previousscene",
       "PropertyInspectorPath": "PropertyInspector/OBSTools.html"
@@ -205,6 +301,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Allows you to start or stop recording in OBS",
       "UUID": "com.barraider.obstools.recordingtoggle",
       "PropertyInspectorPath": "PropertyInspector/Recording.html"
@@ -243,6 +340,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Change the OBS profile you're on",
       "UUID": "com.barraider.obstools.setprofile",
       "PropertyInspectorPath": "PropertyInspector/SetProfile.html"
@@ -259,6 +357,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Change the Scene Collections",
       "UUID": "com.barraider.obstools.setscenecollection",
       "PropertyInspectorPath": "PropertyInspector/SetSceneCollection.html"
@@ -275,6 +374,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Set the default transition in OBS",
       "UUID": "com.barraider.obstools.settransition",
       "PropertyInspectorPath": "PropertyInspector/Transition.html"
@@ -302,6 +402,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Transitions scenes between Studio and Live mode",
       "UUID": "com.barraider.obstools.smartsceneswitcher",
       "PropertyInspectorPath": "PropertyInspector/SmartSceneSwitcher.html"
@@ -435,6 +536,7 @@
       ],
       "SupportedInMultiActions": true,
       "DisableCaching": true,
+      "UserTitleEnabled": false,
       "Tooltip": "Toggles Studio Mode On or Off",
       "UUID": "com.barraider.obstools.studiomodetoggle",
       "PropertyInspectorPath": "PropertyInspector/OBSTools.html"
@@ -488,7 +590,7 @@
   "Name": "OBS Tools",
   "Icon": "Images/pluginIcon",
   "URL": "https://BarRaider.com/",
-  "Version": "2.7",
+  "Version": "2.9.2",
   "DefaultWindowSize": [ 620, 750 ],
   "CodePath": "com.barraider.obstools",
   "Category": "OBS Tools [BarRaider]",
@@ -501,6 +603,6 @@
   ],
   "SDKVersion": 2,
   "Software": {
-    "MinimumVersion": "4.9"
+    "MinimumVersion": "6.0"
   }
 }
